--- a/concord/teaching-teamwork/pic/css/pic.css
+++ b/concord/teaching-teamwork/pic/css/pic.css
@@ -60,7 +60,7 @@ svg {
 }
 
 
-#sidebar {
+#sidebar-chat {
   position: absolute;
   top: 150px;
   right: 0;
@@ -68,10 +68,43 @@ svg {
   width: 200px;
   background-color: #777;
 }
-#sidebar-title {
+#sidebar-chat-title {
   padding: 5px;
   background-color: #ccc;
 }
+#sidebar-chat .sidebar-chat-items {
+  padding: 10px;
+  overflow: auto;
+  height: 465px;
+}
+#sidebar-chat .sidebar-chat-items .chat-item {
+  clear: both;
+  margin-bottom: 5px;
+  padding: 5px 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+#sidebar-chat .sidebar-chat-items .chat-item-me {
+  float: right;
+  background-color: #37edc1;
+}
+#sidebar-chat .sidebar-chat-items .chat-item-others {
+  float: left;
+  background-color: #86c6ff;
+}
+#sidebar-chat .sidebar-chat-input {
+  padding: 10px;
+}
+#sidebar-chat .sidebar-chat-input textarea {
+  width: 100%;
+  height: 60px;
+}
+#sidebar-chat .sidebar-chat-input button {
+  margin-top: 5px;
+  float: right;
+}
+
 
 #workspace {
   position: absolute;
@@ -125,5 +158,3 @@ svg {
   font-family: monospace;
   white-space: pre;
 }
-
-
